@@ -60,6 +60,10 @@ unique(x, incomparables = FALSE, \dots)
 
   Strings with embedded nuls of the same length will be considered
   equal if they agree when truncated at the first nul.
+  
+  Values in \code{incomparables} will never be marked as duplicated.
+  This is intended to be used for a fairly small set of values and will
+  not be efficient for a very large set.
 }
 \value{
   For a vector, an object of the same type of \code{x}, but with only
